# clinical-rlhf-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  mlflow.db  pyproject.toml  pytest.ini  requirements-production.txt  requirements.txt  run_p0_demo.py
config/: clinical_rlhf_config.yaml  production_config.yaml
docs/: RESEARCH_REPORT.md
monitoring/: prometheus.yml
scripts/: run_all_demos.py  run_tests.py
src/: __init__.py
src/evaluation/: __init__.py  memory_monitor.py  monitoring.py
src/reward_models/: __init__.py  multi_objective_reward.py
src/safety/: __init__.py  guardrails.py  hallucination_detector.py  rollback.py
src/training/: __init__.py  ppo_trainer.py
tests/: conftest.py  test_integration.py  test_monitoring.py  test_reward_models.py  test_safety.py
